--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,130 @@
 #container{
 	margin: 20px 20%;
-
+	padding: 80px auto;
+	/* box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2) */
 }
-img{
+.success {
+	color: #000;
+	text-align: center;
+	font-size: 30px;
+	margin: 0 0 25px;
+	font-weight: bold;
+	text-transform: capitalize;
+}
+/* img{
 	margin-left: auto;
 	margin-right: auto;
 	
 	display: block;
+} */
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(45deg, #89e7eb, #e98074)
+}
+
+body{
+    font-family: 'Varela Round', sans-serif;
+}
+	
+.modal-newsletter {	
+	color: #999;
+	font-size: 15px;
+  	min-width: 600px;
+}
+.modal-newsletter .modal-content {
+	padding: 40px;
+	border-radius: 0;		
+	border: none;
+}
+.modal-newsletter .modal-header {
+	border-bottom: none;   
+	position: relative;
+	text-align: center;
+	border-radius: 5px 5px 0 0;
+}
+.modal-newsletter h4 {
+	color: #000;
+	text-align: center;
+	font-size: 30px;
+	margin: 0 0 25px;
+	font-weight: bold;
+	text-transform: capitalize;
+}
+.modal-newsletter .close {
+	background: #c0c3c8;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #fff;
+    text-shadow: none;
+    opacity: 0.5;
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+    font-size: 19px;
+    text-align: center;
+    padding: 0;
+}
+.modal-newsletter .close span {
+	position: relative;
+	top: -1px;
+}
+.modal-newsletter .close:hover {
+	opacity: 0.8;
+}
+.modal-newsletter .icon-box {
+	color: #7265ea;		
+	display: inline-block;
+	z-index: 9;
+	text-align: center;
+	position: relative;
+	margin-bottom: 10px;
+}
+.modal-newsletter .icon-box i {
+	font-size: 110px;
+}
+.modal-newsletter .form-control, .modal-newsletter .btn {
+	min-height: 46px;
+	border-radius: 3px; 
+}
+.modal-newsletter .form-control {
+	box-shadow: none;
+	border-color: #dbdbdb;
+}
+.modal-newsletter .form-control:focus {
+	border-color: #7265ea;
+	box-shadow: 0 0 8px rgba(114, 101, 234, 0.5);
+}
+.modal-newsletter .btn {
+	color: #fff;
+	border-radius: 4px;
+	background: #7265ea;
+	text-decoration: none;
+	transition: all 0.4s;
+	line-height: normal;
+	padding: 6px 20px;
+	min-width: 150px;
+	border: none;
+}
+.modal-newsletter .btn:hover, .modal-newsletter .btn:focus {
+	background: #4e3de4;
+	outline: none;
+}
+.modal-newsletter .input-group {
+	margin: 30px 0 15px;
+}
+.hint-text {
+	margin: 100px auto;
+	text-align: center;
+}
+#checkbox { 
+    margin: 30px 0 15px;
+    padding: 2px 25px;
+    /* margin: auto auto; */
+	text-align: center;
+    
+  
 }
